@@ -3,6 +3,7 @@
  * Copyright (C) 2002-2003 CodeFactory AB
  * Copyright (C) 2002-2003 Richard Hult <richard@imendio.com>
  * Copyright (C) 2002 Mikael Hallendal <micke@imendio.com>
+ * Copyright (C) 2004 Alvaro del Castillo <acs@barrapunto.com>
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -675,4 +676,60 @@ mrp_resource_set_calendar (MrpResource *resource, MrpCalendar *calendar)
 	g_return_if_fail (MRP_IS_RESOURCE (resource));
 
 	g_object_set (resource, "calendar", calendar, NULL);
+}
+
+/**
+ * mrp_resource_clone:
+ * @resource: an #MrpResource
+ *
+ * Returns a clone of the MrpResource 
+ * 
+ **/
+MrpResource *
+mrp_resource_clone (MrpResource *resource)
+{
+	MrpResource     *clone;
+	MrpResourcePriv *priv;
+	MrpProject      *project;
+	GList           *custom_prop, *l;
+
+	g_return_if_fail (MRP_IS_RESOURCE (resource));
+
+	priv = clone->priv;
+	
+	clone = g_object_new (MRP_TYPE_RESOURCE, NULL);
+	priv = clone->priv;
+
+	mrp_object_get (resource,
+			"name",     &priv->name,
+			"group",    &priv->group,
+			"type",     &priv->type,
+			"units",    &priv->units,
+			"email",    &priv->email,
+			"note",     &priv->note,
+			"calendar", &priv->calendar,
+			"project",  &project,
+			NULL);
+
+	mrp_object_set (clone, "project", project, NULL);
+
+	/* Custom properties */
+	custom_prop = mrp_project_get_properties_from_type (project,
+							    MRP_TYPE_RESOURCE);
+	for (l = custom_prop; l; l = l->next) {
+		MrpProperty *property;
+		GValue       value = { 0 };
+		GParamSpec  *pspec;
+
+		property = l->data;
+
+		pspec = G_PARAM_SPEC (property);
+		g_value_init (&value, G_PARAM_SPEC_VALUE_TYPE (pspec));
+
+		mrp_object_get_property (MRP_OBJECT (resource), l->data, &value);
+		mrp_object_set_property (MRP_OBJECT (clone), l->data, &value);
+	}
+	/* FIXME: assignments */
+
+	return clone;
 }
